ajustement couleurs pour améliorer le contraste

--- a/style.css
+++ b/style.css
@@ -744,6 +744,8 @@ h4 {
 
 .portfolio-thumb {
     margin-bottom: 24px;
+    width: 270px;
+    height: 270px;
 }
 
 .portfolio-row {
@@ -774,7 +776,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #364577;
+    background-color: #F3976C;
 }
 
 .tc-white {
@@ -787,7 +789,7 @@ h4 {
 }
 
 .btn-atomic-tangerine:hover {
-    background: #c27956!important;
+    background: #F3976C!important;
     color: #FFFFFF!important;
 }
 
