modif couleur icones sociaux

--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: rgba(255, 255, 255, .6);
+    color: "F3976C";
 }
 
 .d-bloc .a-btn:hover,
