modifs sur boutons pour contrastes

--- a/style.css
+++ b/style.css
@@ -783,12 +783,12 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C!important;
-    color: #FFFFFF!important;
+    color: #313131;
 }
 
 .btn-atomic-tangerine:hover {
     background: #f0b9a0!important;
-    color: #333333!important;
+    color: #364577!important;
 }
 
 .ltc-white {
