--- a/style.css
+++ b/style.css
@@ -692,7 +692,7 @@ p {
 
 .cta-hero {
     margin-top: 22px;
-    color: #FFFFFF!important;
+    color: #364577!important;
     text-transform: uppercase;
     padding: 12px 28px 12px 28px;
     font-size: 16px;
