--- a/style.css
+++ b/style.css
@@ -17,7 +17,11 @@ a:hover {
     text-decoration: none;
     cursor: pointer;
 }
-
+.navlink:hover{
+    color:#364577;
+    transform: scale(1.3);
+    transition: ease-in-out;
+}
 #page-loading-blocs-notifaction {
     position: fixed;
     top: 0;
@@ -789,6 +793,9 @@ h4 {
     color: #364577!important;
     font-weight: bold;
 }
+.tc-atomic-tangerine {
+    color: #F3976C!important;
+}
 .btn-atomic-tangerine {
     background: rgb(243,166,125);
     color: #313131;
@@ -915,6 +922,9 @@ h4 {
     #disqus_thread {
         padding-left: 10px!important;
         padding-right: 10px!important;
+    }
+    .navbar-brand{
+        height:50px;
     }
     .b-parallax {
         background-attachment: scroll;
